--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     </div>
     <div id ="content">
       <div id = "nav">
-   
+
         <ul>
           <li><a class="selected" href="">Home</a></li>
           <li><a href="contact.html">Contact</a></li>
@@ -21,7 +21,7 @@
           <li><a href="schedule.html">Schedule</a></li>
           <li><a href="assignments.html">Assignments</a></li>
           <li><a href="resources.html">Resources</a></li>
-          <li><a href="groups.html">Groups</a></li>
+          <li><a href="groups.html">Student Groups</a></li>
       </div>
       <div id = "main">
 
