--- a/resources.html
+++ b/resources.html
@@ -18,6 +18,7 @@
           <li><a href="schedule.html">Schedule</a></li>
           <li><a href="assignments.html">Assignments</a></li>
           <li><a class="selected" href="resources.html">Resources</a></li>
+          <li><a href="groups.html">Student Groups</a></li>
       </div>
       <div id = "main">
         <div>
