--- a/groups.html
+++ b/groups.html
@@ -10,7 +10,7 @@
     </div>
     <div id ="content">
       <div id = "nav">
-  
+
         <ul>
           <li><a href="index.html">Home</a></li>
           <li><a href="contact.html">Contact</a></li>
@@ -18,50 +18,45 @@
           <li><a href="schedule.html">Schedule</a></li>
           <li><a href="assignments.html">Assignments</a></li>
           <li><a href="resources.html">Resources</a></li>
+          <li><a class="selected" href="groups.html">Student Groups</a></li>
       </div>
-      <div id = "main">
-        <h2> Student Groups </h2>
-       
-       <div id = "student-group">
-        <div class = student-group-name> Group 1</div>
-        <a href="https://github.com/kaileighh">Kaileigh Hermann</a>
-        <a href="https://github.com/abc">Max Gold</a>
-        <a href="https://github.com/abc">Louai Massri</a>
-        <a href="https://github.com/abc">Elizabeth Kendall</a>
-       </div>
-     
-      <div id = "student-group">
-        <div class = student-group-name> </div>
-        <a href="https://github.com/schust70">Camren Schuster</a>
-        <a href="https://github.com/diamase">Dia Mason</a>
-       </div>
+      <div id="main">
+        <div class="grid-container">
 
-       <div id = "student-group">
-        <div class = student-group-name>JAC</div>
-        <a href="https://github.com/JShelby1">Jordan Shelby</a>
-        <a href="https://github.com/bakera33">Andrew Baker</a>
-        <a href="https://github.com/Colvinca">Catera Colvin</a>
+          <div class = "grid-item"> <h4>GROUP 1</h4>
+          <a href="https://github.com/kaileighh">Kaileigh Hermann</a> <br>
+          <a href="https://github.com/abc">Max Gold</a> <br>
+          <a href="https://github.com/abc">Louai Massri</a><br>
+          <a href="https://github.com/abc">Elizabeth Kendall</a>
+        </div>
+
+          <div class = "grid-item"> <h4>F.U.N</h4>
+          <a href="https://github.com/schust70">Camren Schuster</a><br>
+          <a href="https://github.com/diamase">Dia Mason</a><br>
+          <a href="https://github.com/pete1199">Phoebe Peterson</a>
+        </div>
+
+          <div class = "grid-item"><h4>JAC</h4>
+          <a href="https://github.com/JShelby1">Jordan Shelby</a><br>
+          <a href="https://github.com/bakera33">Andrew Baker</a><br>
+          <a href="https://github.com/Colvinca">Catera Colvin</a><br>
+        </div>
+
+          <div class = "grid-item"> <h4>JSEP</h4>
+          <a href="https://github.com/abc">Josh Campbell</a><br>
+          <a href="https://github.com/abc">Sophie Furlong</a><br>
+          <a href="https://github.com/lyelizab">Elizabeth Ly</a>
+        </div>
+
+          <div class = "grid-item"> <h4>DREAM TEAM</h4>
+          <a href="https://github.com/zbohenick">Zachary Bohenick</a><br>
+          <a href="https://github.com/abc">William Wright</a><br>
+          <a href="https://github.com/abc">Jonnie Rozin</a><br>
+          <a href="https://github.com/Gabrielie">Najiang An</a>
+         </div>
+
        </div>
-
-       <div id = "student-group">
-        <div class = student-group-name>JSEP</div>
-        <a href="https://github.com/abc">Josh Campbell</a>
-        <a href="https://github.com/abc">Sophie Furlong</a>
-        <a href="https://github.com/lyelizab">Elizabeth Ly</a>
-        <a href="https://github.com/pete1199">Phoebe Peterson</a>
-       </div>
-
-       <div id = "student-group">
-        <div class = student-group-name>Dream Team</div>
-        <a href="https://github.com/zbohenick">Zachary Bohenick</a>
-        <a href="https://github.com/abc">William Wright</a>
-        <a href="https://github.com/abc">Jonnie Rozin</a>
-        <a href="https://github.com/Gabrielie">Najiang An</a>
-       </div>
-
-
-      </div>
-    </div>
+  </div>
     <div id = "footer">
       Copyright &copy; 2019 John Monberg
     </div>
