--- a/policies.html
+++ b/policies.html
@@ -10,7 +10,7 @@
     </div>
     <div id ="content">
       <div id = "nav">
-  
+
         <ul>
           <li><a href="index.html">Home</a></li>
           <li><a href="contact.html">Contact</a></li>
@@ -18,6 +18,7 @@
           <li><a href="schedule.html">Schedule</a></li>
           <li><a href="assignments.html">Assignments</a></li>
           <li><a href="resources.html">Resources</a></li>
+          <li><a href="groups.html">Student Groups</a></li>
       </div>
       <div id = "main">
         <h2> Attendance </h2>
